<resources>
    <string name="app_name">Up and Atom!</string>
    <string name="alarms_tab">Alarms</string>
    <string name="action_settings">Settings</string>
    <string name="settings_tab">Settings</string>
    <string name="user_record">Your record:</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_override">Enter a passcode to override the alarm\nif the code cannot be found.</string>
    <string name="dialog_new_alarm">Choose the type of alarm</string>
    <string name="action_about">About</string>
    <string name="add_new_alarm">Add New Alarm</string>
    <string name="alarm_name_hint">Alarm Title</string>
    <string name="alarm_memo_hint">Alarm Memo</string>
    <string name="qr_button_text">Scan QR Code</string>
    <string name="alarm_override_textview">Alarm Override</string>
    <string name="confirm_button">Confirm</string>
    <string name="about_developers">Created by:\nHannah Butler\nConor Taggart\nKelvin Harron\nPeter McCaughey</string>
    <string name="cool">Cool</string>
    <string name="location_alarm">Location Alarm</string>
    <string name="time_alarm">Time Alarm</string>
    <string name="preset_alarm_name">My Alarm</string>
    <string name="preset_alarm_memo">Scan the coffee jar!</string>
    <string name="preset_days">Mon, Tues, Wed</string>
    <string name="preset_alarm_hours">06</string>
    <string name="preset_alarm_mins">30</string>
    <string name="permission_required_toast">Location permission is required to determine if
        user is in home location so that required codes are nearby.</string>
    <string name="permission_rationale_location">Access to the location service is required to
        determine if you are in your home location, set in app setting.</string>
    <string name="location_permission_denied">This app requires location permission to enable the
        \'my location\' layer. Please try again and grant access to use the location.\nIf the
        permission has been permanently denied, it can be enabled from the System Settings
        &gt; Apps &gt; \'QR Alarm\'.</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="getting_started_override_tip">If you lose the object you scanned you can always use the override code above.\nIf you want to set a new one, click on the overflow menu (top right) and go to settings.</string>
    <string name="default_override">atom</string>
    <string name="override_card_name">Default override code</string>
    <string name="step_one_description">A name and memo will help you quickly choose what to scan</string>
    <string name="step_one_title">Set a name and memo</string>
    <string name="step_two_title">Scan a barcode or QR code</string>
    <string name="step_two_description">Something that you tend to use each morning!</string>
    <string name="step_three_title">Wait for your alarm</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="step_three_description">Get the object and scan to deactivate the alarm. Now you\'re all set for the day!</string>
    <string name="location_tip_description">Always make sure to set your home location in settings so that, should your alarm go off when you are not at home, you can easily dismiss it.</string>
    <string name="location_in_alarms">Location in alarms</string>


</resources>
