<?xml version="1.0" encoding="utf-8"?><!-- This fragment is displayed when the user selects the override option.
Looks rough currently and crashes when the user hits submit. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/dialog_override"
        android:textColor="@color/textBlack"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editTextPasscode"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="70dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button"
            android:textColor="@color/themeAccent" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"
            android:text="@string/button_confirm"
            android:textColor="@color/themeAccent" />
    </LinearLayout>
</LinearLayout>