<?xml version="1.0" encoding="utf-8"?>

<!-->XML Layout for the 'Add new (location) alarm'<-->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNewAlarm"
    android:theme="@android:style/Theme.Material.Light">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-->Layout containing widgets for the alarm title & memo<-->
        <RelativeLayout
            android:id="@+id/locationAlarmlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/alarm_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:hint="@string/alarm_name_hint"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location_alarm_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til1"
                android:background="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/location_alarm_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:hint="@string/alarm_memo_hint"
                    android:singleLine="true"/>

                <!-->Map Fragment<-->
                <fragment
                    android:id="@+id/location_map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    ></fragment>

                <!-->Layout containing day of the week checkboxes<-->
                <LinearLayout
                    android:id="@+id/location_alarm_layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_below="@+id/line3"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:paddingLeft="20dp"
                    android:background="?attr/colorPrimary"
                    >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="M"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="T"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="W"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Th"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="F"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="S"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="S"/>
                </LinearLayout>

                <!-->QR Scanner button<-->
                <RelativeLayout
                    android:id="@+id/location_alarm_layout_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                    >

                    <Button
                        android:id="@+id/QRButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/qr_button_text"
                        android:textAllCaps="true"
                        android:clickable="true"
                        android:background="?attr/colorPrimary"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        style="?android:attr/borderlessButtonStyle"
                        />
                </RelativeLayout>

                <!-->Override Switch<-->
                <LinearLayout
                    android:id="@+id/location_alarm_layout_7"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/white"

                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:background="?attr/colorPrimary"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_override_textview"
                        android:paddingTop="12dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:textSize="16sp"/>

                    <Switch
                        android:id="@+id/overrideSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="180dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="5dp"
                        android:textAllCaps="true"
                        android:background="?attr/colorPrimary" />
                </LinearLayout>

                <!-->Ringtone Spinner<-->
                <RelativeLayout
                    android:id="@+id/location_alarm_layout_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding">

                    <Spinner
                        android:id="@+id/ringtoneSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="?attr/colorPrimary"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        style="?android:attr/selectableItemBackgroundBorderless"
                        >
                    </Spinner>

                    <!-->Confirmation Button - Change to FAB or at least more material look?<-->
                    <Button
                        android:id="@+id/confirmButton"
                        android:layout_below="@+id/ringtoneSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_button"
                        android:textAllCaps="true"
                        android:clickable="true"
                        android:background="?attr/colorPrimary"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginBottom="@dimen/add_new_alarm_standard_padding"
                        style="?android:attr/borderlessButtonStyle"
                        />

                </RelativeLayout>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/anlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>

