<?xml version="1.0" encoding="utf-8"?>

<!-->XML Layout for the 'Add new (time) alarm screen'<-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@android:style/Theme.Material.Light"
    tools:context=".AddNewAlarm">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-->Layout containing widgets for the alarm title & memo<-->
        <RelativeLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/timeTIL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/time_alarm_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:hint="@string/alarm_name_hint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/timeTIL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeTIL1"
                android:background="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/time_alarm_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:hint="@string/alarm_memo_hint"
                    android:singleLine="true" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding">

                    <TextView
                        android:id="@+id/tester"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TEST" />

                    <TextView
                        android:id="@+id/tester2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tester"
                        android:text="TEST2" />

                    <TimePicker
                        android:id="@+id/timeAlarmTimepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tester"
                        android:background="?attr/colorPrimary">

                    </TimePicker>
                </RelativeLayout>

                <!-->Layout containing day of the week checkboxes<-->
                <LinearLayout
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line3"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp">

                    <CheckBox
                        android:id="@+id/timeMonday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="M"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeTuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="T"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeWednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="W"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeThursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Th"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeFriday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="F"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeSaturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="S"
                        android:textColor="@color/white" />

                    <CheckBox
                        android:id="@+id/timeSunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="S"
                        android:textColor="@color/white" />
                </LinearLayout>

                <!-->QR Scanner button<-->
                <RelativeLayout
                    android:id="@+id/line6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding">

                    <Button
                        android:id="@+id/QRButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:background="?attr/colorPrimary"
                        android:clickable="true"
                        android:text="@string/qr_button_text"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <!-->Override Switch<-->
                <LinearLayout
                    android:id="@+id/line7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:textColor="@color/white"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:paddingTop="12dp"
                        android:text="@string/alarm_override_textview"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/overrideSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="180dp"
                        android:background="?attr/colorPrimary"
                        android:paddingBottom="5dp"
                        android:paddingTop="15dp"
                        android:textAllCaps="true" />
                </LinearLayout>

                <!-->Ringtone Spinner<-->
                <RelativeLayout
                    android:id="@+id/line8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_new_alarm_standard_padding">
                    <!--
                                        <Spinner
                                            android:id="@+id/ringtoneSpinner"
                                            android:layout_width="wrap_content"
                                            android:layout_height="50dp"
                                            android:background="?attr/colorPrimary"
                                            android:spinnerMode="dropdown"
                                            android:textColor="@color/white"
                                            android:layout_gravity="center"
                                            android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                                            android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                                            style="?android:attr/selectableItemBackgroundBorderless"
                                            >
                                        </Spinner>
                    -->
                    <TextView
                        android:id="@+id/alarm_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:paddingTop="12dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:background="?attr/colorPrimary"
                        android:gravity="left"
                        android:text="Alarm Sound"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/get_ringtone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:layout_below="@+id/alarm_sound"
                        android:paddingBottom="12dp"
                        android:paddingLeft="10dp"
                        android:background="?attr/colorPrimary"
                        android:gravity="left"
                        android:text="Alarm Sound"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>


                    <TextView
                        android:id="@+id/volume_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/get_ringtone"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:text="Seekbar"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <SeekBar
                        android:id="@+id/volume_bar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:layout_below="@+id/volume_label"
                        android:max="10"
                        android:progress="5"></SeekBar>
                    <!-->Confirmation Button - Change to FAB or at least more material look?<-->
                    <Button
                        android:id="@+id/confirmButton"
                        style="?android:attr/selectableItemBackgroundBorderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/volume_bar"
                        android:layout_marginBottom="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginLeft="@dimen/add_new_alarm_standard_padding"
                        android:layout_marginRight="@dimen/add_new_alarm_standard_padding"
                        android:background="?attr/colorPrimary"
                        android:gravity="center"
                        android:text="@string/confirm_button"
                        android:textColor="@color/white" />
                </RelativeLayout>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
